# StockAnalystBot

./: CMakeLists.txt  README.md
tests/: CMakeLists.txt  tester.cpp  webscraper-test.cpp
web-scraper/: CMakeLists.txt
web-scraper/include/webscraper/: webscraper.hpp
web-scraper/src/: webscraper.cpp
web-tools/: CMakeLists.txt
web-tools/include/redditscraper/: redditscraper.hpp
web-tools/include/stockmonitor/: stockmonitor.hpp
web-tools/src/: redditscraper.cpp  stockmonitor.cpp
